# timeflow

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20241226_043436_1st_migrate.rs
src/: error.rs  main.rs
src/entities/: mod.rs  prelude.rs  sites.rs  time_sheet.rs  users.rs  users_sites.rs
src/handler/: mod.rs  sites.rs  testexport.rs  time_sheet.rs  user.rs
src/routes/: mod.rs  sites.rs  testexport.rs  time_sheet.rs  user.rs
src/services/: mod.rs  sites.rs  testexport.rs  time_sheet.rs  user.rs
src/utils/: mod.rs  sites_error.rs  time_sheet_error.rs
