[package]
name = "timeflow"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls","sqlx-postgres","with-chrono","macros"] }
actix-web = "4"
dotenvy="0.15.7"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display","from"] }
chrono = "0.4.39"
serde = "1.0.215"
log="0.4"
serde_json = "1.0"
genpdf="0.2.0"